RESOLVED FIXED188374
REGRESSION (r233778): Text selection sometimes cannot be extended in iframes
https://bugs.webkit.org/show_bug.cgi?id=188374
Summary REGRESSION (r233778): Text selection sometimes cannot be extended in iframes
Wenson Hsieh
Reported 2018-08-06 23:02:42 PDT
Attachments
Patch (15.20 KB, patch)
2018-08-06 23:24 PDT, Wenson Hsieh
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (16.16 MB, application/zip)
2018-08-07 01:24 PDT, EWS Watchlist
no flags
Patch (14.19 KB, patch)
2018-08-07 09:49 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-08-06 23:24:41 PDT
EWS Watchlist
Comment 2 2018-08-07 01:24:38 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 3 2018-08-07 01:24:40 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 4 2018-08-07 08:53:59 PDT
Hmmm, UIScriptController.longPressAtPoint doesn't appear to work in iOS 11.4 on trunk, without any internal bits (i.e. OpenSource only). When running MobileSafari against these built products, the long press text selection gesture to select a single word also does not work, so this isn't limited to the test runner. I might have to keep these tests iOS 12-only for now.
Wenson Hsieh
Comment 5 2018-08-07 09:49:40 PDT
WebKit Commit Bot
Comment 6 2018-08-07 11:32:48 PDT
Comment on attachment 346709 [details] Patch Clearing flags on attachment: 346709 Committed r234661: <https://trac.webkit.org/changeset/234661>
WebKit Commit Bot
Comment 7 2018-08-07 11:32:50 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 8 2018-10-30 18:10:05 PDT
*** Bug 191081 has been marked as a duplicate of this bug. ***
Wenson Hsieh
Comment 9 2019-01-27 14:23:49 PST
*** Bug 193663 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.